Fix Google Scholar text wrapping by applying white-space: nowrap to container

--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -46,6 +46,10 @@
       }
     }
 
+    &.follow-links .social-link {
+      white-space: nowrap;
+    }
+    
     &.follow-links .social-link a {
       white-space: nowrap;
     }
